--- a/resources/demographics/population.ipynb
+++ b/resources/demographics/population.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -66,19 +66,19 @@
        "      <td>South Asia</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>AGO</td>\n",
        "      <td>Angola</td>\n",
        "      <td>Sub-Saharan Africa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
        "      <td>ALB</td>\n",
        "      <td>Albania</td>\n",
        "      <td>Europe &amp; Central Asia</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>4</th>\n",
        "      <td>AND</td>\n",
        "      <td>Andorra</td>\n",
        "      <td>Europe &amp; Central Asia</td>\n",
@@ -91,18 +91,19 @@
        "  Country_Code Country_Region                      Region\n",
        "0          ABW          Aruba  Latin America & Caribbean \n",
        "1          AFG    Afghanistan                  South Asia\n",
-       "3          AGO         Angola         Sub-Saharan Africa \n",
-       "4          ALB        Albania       Europe & Central Asia\n",
-       "5          AND        Andorra       Europe & Central Asia"
+       "2          AGO         Angola         Sub-Saharan Africa \n",
+       "3          ALB        Albania       Europe & Central Asia\n",
+       "4          AND        Andorra       Europe & Central Asia"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%run regions.ipynb\n",
+    "# %run regions.ipynb\n",
+    "regions_df = pd.read_csv('regions.csv')\n",
     "regions_df.head()"
    ]
   },
