--- a/resources/demographics/regions.ipynb
+++ b/resources/demographics/regions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
        "5          AND        Andorra       Europe & Central Asia"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,8 +124,8 @@
    "outputs": [],
    "source": [
     "# Save CSV\n",
-    "file = os.path.join('regions.csv')\n",
-    "regions_df.to_csv(file, index=False, header=True)"
+    "# file = os.path.join('regions.csv')\n",
+    "# regions_df.to_csv(file, index=False, header=True)"
    ]
   },
   {
