--- a/static/resources/health/diseases.ipynb
+++ b/static/resources/health/diseases.ipynb
@@ -159,7 +159,7 @@
     "dis_df = dis_df.drop(['Year'], axis=1)\n",
     "dis_df.rename(columns={'Entity': 'Country_Region', 'Code': 'Country_Code'}, inplace=True)\n",
     "\n",
-    "dis_data17 = os.path.join('2017-gbds.csv')\n",
+    "dis_data17 = os.path.join('gbds_2017.csv')\n",
     "dis_df.to_csv(dis_data17, index=False, header=True)\n",
     "\n",
     "dis_df.head()"
@@ -355,7 +355,7 @@
     "ncd_df = ncd_df.drop(['Year'], axis=1)\n",
     "ncd_df.rename(columns={'Entity': 'Country_Region', 'Code': 'Country_Code'}, inplace=True)\n",
     "\n",
-    "ncd_data17 = os.path.join('2017-ncds.csv')\n",
+    "ncd_data17 = os.path.join('ncds_2017.csv')\n",
     "ncd_df.to_csv(ncd_data17, index=False, header=True)\n",
     "\n",
     "ncd_df.head()"
@@ -385,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
