--- a/static/resources/confirmed.ipynb
+++ b/static/resources/confirmed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "[5 rows x 81 columns]"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
        "[5 rows x 81 columns]"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,14 +451,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2535\n"
+      "2534\n"
      ]
     },
     {
@@ -506,6 +506,30 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3231</th>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>US</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3020</td>\n",
+       "      <td>3847</td>\n",
+       "      <td>3686</td>\n",
+       "      <td>4512</td>\n",
+       "      <td>4866</td>\n",
+       "      <td>4808</td>\n",
+       "      <td>3935</td>\n",
+       "      <td>3821</td>\n",
+       "      <td>3521</td>\n",
+       "      <td>2207</td>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <th>3240</th>\n",
        "      <td>Rhode Island</td>\n",
@@ -602,69 +626,50 @@
        "      <td>648</td>\n",
        "      <td>677</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3252</th>\n",
-       "      <td>Grand Princess</td>\n",
-       "      <td>US</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>103</td>\n",
-       "      <td>103</td>\n",
-       "      <td>103</td>\n",
-       "      <td>103</td>\n",
-       "      <td>103</td>\n",
-       "      <td>103</td>\n",
-       "      <td>103</td>\n",
-       "      <td>103</td>\n",
-       "      <td>103</td>\n",
-       "      <td>103</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "<p>5 rows × 81 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Province/State Country/Region  Lat  Long  1/22/20  1/23/20  1/24/20  \\\n",
-       "3240    Rhode Island             US  0.0   0.0        0        0        0   \n",
-       "3243       Tennessee             US  0.0   0.0        0        0        0   \n",
-       "3246         Vermont             US  0.0   0.0        0        0        0   \n",
-       "3248      Washington             US  0.0   0.0        0        0        0   \n",
-       "3252  Grand Princess             US  0.0   0.0        0        0        0   \n",
+       "     Province/State Country/Region  Lat  Long  1/22/20  1/23/20  1/24/20  \\\n",
+       "3231     New Jersey             US  0.0   0.0        0        0        0   \n",
+       "3240   Rhode Island             US  0.0   0.0        0        0        0   \n",
+       "3243      Tennessee             US  0.0   0.0        0        0        0   \n",
+       "3246        Vermont             US  0.0   0.0        0        0        0   \n",
+       "3248     Washington             US  0.0   0.0        0        0        0   \n",
        "\n",
        "      1/25/20  1/26/20  1/27/20  ...  3/29/20  3/30/20  3/31/20  4/1/20  \\\n",
+       "3231        0        0        0  ...     3020     3847     3686    4512   \n",
        "3240        0        0        0  ...       57      171      184     160   \n",
        "3243        0        0        0  ...      190      197      307     442   \n",
        "3246        0        0        0  ...        7       28       11      14   \n",
        "3248        0        0        0  ...      125      274      274     303   \n",
-       "3252        0        0        0  ...      103      103      103     103   \n",
        "\n",
        "      4/2/20  4/3/20  4/4/20  4/5/20  4/6/20  4/7/20  \n",
+       "3231    4866    4808    3935    3821    3521    2207  \n",
        "3240      80     146     241     238     332     353  \n",
        "3243       6      54      63      86      69      59  \n",
        "3246       5       6      11      13      21       3  \n",
        "3248     344     501     483     533     648     677  \n",
-       "3252     103     103     103     103     103     103  \n",
        "\n",
        "[5 rows x 81 columns]"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Drop rows with zero cases\n",
     "last_column = confirmed_us_df[confirmed_us_df.columns[-1]]\n",
     "rows = confirmed_us_df.loc[last_column == 0].index\n",
     "confirmed_us_df.drop(rows, inplace=True)\n",
+    "\n",
+    "# Drop cruise ship with no location\n",
+    "cruises = confirmed_us_df.loc[confirmed_us_df['Province/State'].str.contains('Grand Princess')].index\n",
+    "confirmed_us_df.drop(cruises, inplace=True)\n",
     "\n",
     "print(len(confirmed_us_df))\n",
     "confirmed_us_df.tail()"
@@ -672,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,35 +703,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(35.5174913, -86.5804473)"
-      ]
-     },
-     "execution_count": 117,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tn = lat_long(\"Tennessee\")\n",
-    "tn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2535\n"
+      "2534\n"
      ]
     },
     {
@@ -919,11 +903,35 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>3231</th>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>US</td>\n",
+       "      <td>40.058324</td>\n",
+       "      <td>-74.405661</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3020</td>\n",
+       "      <td>3847</td>\n",
+       "      <td>3686</td>\n",
+       "      <td>4512</td>\n",
+       "      <td>4866</td>\n",
+       "      <td>4808</td>\n",
+       "      <td>3935</td>\n",
+       "      <td>3821</td>\n",
+       "      <td>3521</td>\n",
+       "      <td>2207</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>3240</th>\n",
        "      <td>Rhode Island</td>\n",
        "      <td>US</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>41.580095</td>\n",
+       "      <td>-71.477429</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -946,8 +954,8 @@
        "      <th>3243</th>\n",
        "      <td>Tennessee</td>\n",
        "      <td>US</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>35.517491</td>\n",
+       "      <td>-86.580447</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -970,8 +978,8 @@
        "      <th>3246</th>\n",
        "      <td>Vermont</td>\n",
        "      <td>US</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>44.558803</td>\n",
+       "      <td>-72.577841</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -994,8 +1002,8 @@
        "      <th>3248</th>\n",
        "      <td>Washington</td>\n",
        "      <td>US</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>47.751074</td>\n",
+       "      <td>-120.740139</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1014,33 +1022,9 @@
        "      <td>648</td>\n",
        "      <td>677</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3252</th>\n",
-       "      <td>Grand Princess</td>\n",
-       "      <td>US</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>103</td>\n",
-       "      <td>103</td>\n",
-       "      <td>103</td>\n",
-       "      <td>103</td>\n",
-       "      <td>103</td>\n",
-       "      <td>103</td>\n",
-       "      <td>103</td>\n",
-       "      <td>103</td>\n",
-       "      <td>103</td>\n",
-       "      <td>103</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2535 rows × 81 columns</p>\n",
+       "<p>2534 rows × 81 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1051,11 +1035,11 @@
        "4               Virgin Islands             US  18.335800  -64.896300        0   \n",
        "5                      Alabama             US  32.539527  -86.644082        0   \n",
        "...                        ...            ...        ...         ...      ...   \n",
-       "3240              Rhode Island             US   0.000000    0.000000        0   \n",
-       "3243                 Tennessee             US   0.000000    0.000000        0   \n",
-       "3246                   Vermont             US   0.000000    0.000000        0   \n",
-       "3248                Washington             US   0.000000    0.000000        0   \n",
-       "3252            Grand Princess             US   0.000000    0.000000        0   \n",
+       "3231                New Jersey             US  40.058324  -74.405661        0   \n",
+       "3240              Rhode Island             US  41.580095  -71.477429        0   \n",
+       "3243                 Tennessee             US  35.517491  -86.580447        0   \n",
+       "3246                   Vermont             US  44.558803  -72.577841        0   \n",
+       "3248                Washington             US  47.751074 -120.740139        0   \n",
        "\n",
        "      1/23/20  1/24/20  1/25/20  1/26/20  1/27/20  ...  3/29/20  3/30/20  \\\n",
        "1           0        0        0        0        0  ...       56       58   \n",
@@ -1064,11 +1048,11 @@
        "4           0        0        0        0        0  ...       23       30   \n",
        "5           0        0        0        0        0  ...        6        6   \n",
        "...       ...      ...      ...      ...      ...  ...      ...      ...   \n",
+       "3231        0        0        0        0        0  ...     3020     3847   \n",
        "3240        0        0        0        0        0  ...       57      171   \n",
        "3243        0        0        0        0        0  ...      190      197   \n",
        "3246        0        0        0        0        0  ...        7       28   \n",
        "3248        0        0        0        0        0  ...      125      274   \n",
-       "3252        0        0        0        0        0  ...      103      103   \n",
        "\n",
        "      3/31/20  4/1/20  4/2/20  4/3/20  4/4/20  4/5/20  4/6/20  4/7/20  \n",
        "1          69      77      82      84      93     112     113     121  \n",
@@ -1077,16 +1061,16 @@
        "4          30      30      30      37      40      42      43      43  \n",
        "5           7       8      10      12      12      12      12      12  \n",
        "...       ...     ...     ...     ...     ...     ...     ...     ...  \n",
+       "3231     3686    4512    4866    4808    3935    3821    3521    2207  \n",
        "3240      184     160      80     146     241     238     332     353  \n",
        "3243      307     442       6      54      63      86      69      59  \n",
        "3246       11      14       5       6      11      13      21       3  \n",
        "3248      274     303     344     501     483     533     648     677  \n",
-       "3252      103     103     103     103     103     103     103     103  \n",
        "\n",
-       "[2535 rows x 81 columns]"
+       "[2534 rows x 81 columns]"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1094,18 +1078,15 @@
    "source": [
     "for index, row in confirmed_us_df.iterrows():\n",
     "    state = row['Province/State']\n",
-    "    if ((row['Lat']==0) & (row['Long']==0) & (row['Country/Region']=='US')):\n",
+    "    if ((row['Lat']==0) and (row['Long']==0) and (row['Country/Region']=='US')):\n",
     "#         try:\n",
     "        lat, long = lat_long(state)\n",
-    "        row['Lat'] = lat\n",
-    "        row['Long'] = long\n",
-    "#             row['Lat'].replace(0, lat, inplace=True)\n",
-    "#             row['Long'].replace(0, long, inplace=True)\n",
-    "#         except: \n",
-    "#             pass\n",
-    "# #             rows = confirmed_us_df.loc[confirmed_us_df['Province/State'] == state].index\n",
+    "        confirmed_us_df.loc[index, 'Lat'] = lat\n",
+    "        confirmed_us_df.loc[index, 'Long'] = long\n",
+    "#         except (IndexError, KeyError): \n",
+    "#             print(index, state)\n",
     "#             confirmed_us_df.drop(row, inplace=True)\n",
-    "#             print(state)\n",
+    "#             pass\n",
     "\n",
     "print(len(confirmed_us_df))\n",
     "confirmed_us_df"
@@ -1113,19 +1094,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "zero = confirmed_us_df.loc[confirmed_us_df['Lat']==0]\n",
-    "zero"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Province/State</th>\n",
+       "      <th>Country/Region</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Long</th>\n",
+       "      <th>4/7/20</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>33.0000</td>\n",
+       "      <td>65.0000</td>\n",
+       "      <td>423</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>41.1533</td>\n",
+       "      <td>20.1683</td>\n",
+       "      <td>383</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>28.0339</td>\n",
+       "      <td>1.6596</td>\n",
+       "      <td>1468</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>42.5063</td>\n",
+       "      <td>1.5218</td>\n",
+       "      <td>545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Angola</td>\n",
+       "      <td>-11.2027</td>\n",
+       "      <td>17.8739</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Province/State Country/Region      Lat     Long  4/7/20\n",
+       "0            NaN    Afghanistan  33.0000  65.0000     423\n",
+       "1            NaN        Albania  41.1533  20.1683     383\n",
+       "2            NaN        Algeria  28.0339   1.6596    1468\n",
+       "3            NaN        Andorra  42.5063   1.5218     545\n",
+       "4            NaN         Angola -11.2027  17.8739      17"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "combined_df = pd.concat([confirmed_df, confirmed_us_df], sort=False)\n",
     "combined_df.drop(combined_df.columns[4:-1], axis=1, inplace=True)\n",
@@ -1134,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
