--- a/static/resources/confirmed.ipynb
+++ b/static/resources/confirmed.ipynb
@@ -689,7 +689,7 @@
     "\n",
     "    headers = {\n",
     "        'x-rapidapi-host': \"google-maps-geocoding.p.rapidapi.com\",\n",
-    "        'x-rapidapi-key': \"8cc177b195msh4e4f4ff4e0cae0fp10ed89jsn60e0207e5c4d\"\n",
+    "        'x-rapidapi-key': GMAPS_API_KEY\n",
     "        }\n",
     "\n",
     "    response = requests.get(url, headers=headers, params=querystring).json()\n",
