d3 final, need data cleaning

--- a/static/resources/airports/airports.ipynb
+++ b/static/resources/airports/airports.ipynb
@@ -10,9 +10,7 @@
     "import os\n",
     "import json\n",
     "import requests\n",
-    "from pprint import pprint\n",
-    "import warnings\n",
-    "warnings.simplefilter('ignore')"
+    "from pprint import pprint"
    ]
   },
   {
@@ -246,11 +244,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add to airports dataframe\n",
+    "# Add lat, long to dataframe\n",
     "airports_df['Lat'] = lat_list\n",
     "airports_df['Long'] = long_list\n",
     "airports_df.dropna(inplace=True)\n",
-    "# airports.head()\n"
+    "# airports.head()"
    ]
   },
   {
