--- a/static/resources/cases/confirmed.ipynb
+++ b/static/resources/cases/confirmed.ipynb
@@ -1,17 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Confirmed Cases by Province/State (for Leaflet map)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import os\n",
-    "import json\n",
-    "import requests\n",
-    "from pprint import pprint"
+    "import os"
    ]
   },
   {
@@ -220,6 +223,7 @@
     }
    ],
    "source": [
+    "# Global Cases (minus U.S. total)\n",
     "confirmed_df = pd.read_csv('https://github.com/CSSEGISandData/COVID-19/raw/master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_confirmed_global.csv')\n",
     "us = confirmed_df.loc[confirmed_df['Country/Region']=='US']\n",
     "confirmed_df.drop(us.index[0], axis=0, inplace=True)\n",
@@ -439,6 +443,7 @@
     }
    ],
    "source": [
+    "# U.S. Cases by State\n",
     "confirmed_us_df = pd.read_csv('https://github.com/CSSEGISandData/COVID-19/raw/master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_confirmed_US.csv')\n",
     "confirmed_us_df = confirmed_us_df.iloc[:,6:]\n",
     "confirmed_us_df.drop(['Combined_Key'], axis=1, inplace=True)\n",
@@ -1185,6 +1190,7 @@
     }
    ],
    "source": [
+    "# Combine both Global and U.S.\n",
     "combined_df = pd.concat([confirmed_df, confirmed_us_df], sort=False)\n",
     "combined_df.drop(combined_df.columns[4:-1], axis=1, inplace=True)\n",
     "combined_df.head()"
