--- a/static/resources/demographics/population.ipynb
+++ b/static/resources/demographics/population.ipynb
@@ -7,7 +7,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import os\n",
     "import json\n",
     "import requests\n",
@@ -102,7 +101,6 @@
     }
    ],
    "source": [
-    "# %run regions.ipynb\n",
     "regions_df = pd.read_csv('regions.csv')\n",
     "regions_df.head()"
    ]
@@ -171,7 +169,6 @@
     }
    ],
    "source": [
-    "# lookup = regions_df.loc[regions_df['Country_Region']=='China']\n",
     "lookup = regions_df[regions_df['Country_Region'].str.contains(\"Lucia\")]\n",
     "lookup"
    ]
@@ -1467,17 +1464,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save CSV\n",
-    "# file = os.path.join('population_all.csv')\n",
-    "# population_df.to_csv(file, index=False, header=True)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2472,8 +2458,7 @@
     }
    ],
    "source": [
-    "population_df2 = population_df\n",
-    "population_df2 = population_df2.set_index('Country_Code')\n",
+    "population_df2 = population_df.set_index('Country_Code')\n",
     "population_df2['Population Total'] = population_df2.sum(axis=1, skipna=True)\n",
     "population_df2"
    ]
@@ -3080,7 +3065,7 @@
     "    except:\n",
     "        pass\n",
     "    \n",
-    "pop_density = pop_density.set_index('Country_Code')\n",
+    "pop_density.set_index('Country_Code', inplace=True)\n",
     "pop_density"
    ]
   },
