--- a/static/resources/health/diseases.ipynb
+++ b/static/resources/health/diseases.ipynb
@@ -7,25 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import os\n",
-    "import json\n",
-    "import requests\n",
-    "import datetime \n",
-    "from datetime import date\n",
-    "from datetime import datetime as dt\n",
-    "from pprint import pprint"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Source: https://ourworldindata.org/burden-of-disease\n",
-    "# Disability-Adjusted Life Year (DALY) "
+    "import os"
    ]
   },
   {
@@ -38,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -144,14 +126,14 @@
        "139           1.783084e+06  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# regions_df.replace('Korea, Rep.', 'South Korea', inplace=True)\n",
-    "# regions_df.replace('Iran, Islamic Rep.', 'Iran', inplace=True)\n",
+    "# Source: https://ourworldindata.org/burden-of-disease\n",
+    "# Disability-Adjusted Life Year (DALY) \n",
     "\n",
     "dis_data = os.path.join('total-disease-burden-by-cause.csv')\n",
     "dis_df = pd.read_csv(dis_data)\n",
