--- a/static/resources/airports/airports.ipynb
+++ b/static/resources/airports/airports.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Airports\n",
+    "Data Source: https://data.world/datagov-uk/2ecd2a35-fc85-4cd9-b1e7-3a8f92d76fd7"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -132,8 +140,6 @@
     }
    ],
    "source": [
-    "# Source: https://data.world/datagov-uk/2ecd2a35-fc85-4cd9-b1e7-3a8f92d76fd7\n",
-    "# \"Busiest Airports by Passenger Traffic\" from https://data.gov.uk/\n",
     "file = os.path.join('airports_all_2015.csv')\n",
     "airports_df = pd.read_csv(file)\n",
     "airports_df.head()"
