--- a/static/resources/demographics/regions.ipynb
+++ b/static/resources/demographics/regions.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Regions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,6 +101,7 @@
     }
    ],
    "source": [
+    "# API results to dataframe\n",
     "base_url = 'https://api.worldbank.org/v2/country'\n",
     "response = requests.get(f'{base_url}?format=json').json()\n",
     "pages = response[0]['pages']\n",
@@ -119,13 +127,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace with modern names\n",
+    "regions_df.replace('Korea, Rep.', 'South Korea', inplace=True)\n",
+    "regions_df.replace('Iran, Islamic Rep.', 'Iran', inplace=True)\n",
+    "regions_df.replace('Bahamas, The', 'Bahamas', inplace=True)\n",
+    "regions_df.replace('Brunei Darussalam', 'Brunei', inplace=True)\n",
+    "regions_df.replace('Cabo Verde', 'Cape Verde', inplace=True)\n",
+    "regions_df.replace('Congo, Dem. Rep.', 'Democratic Republic of Congo', inplace=True)\n",
+    "regions_df.replace('Congo, Rep.', 'Congo', inplace=True)\n",
+    "regions_df.replace('Egypt, Arab Rep.', 'Egypt', inplace=True)\n",
+    "regions_df.replace('Korea, Dem. People’s Rep.', 'North Korea', inplace=True)\n",
+    "regions_df.replace('Kyrgyz Republic', 'Kyrgyzstan', inplace=True)\n",
+    "regions_df.replace('Lao PDR', 'Laos', inplace=True)\n",
+    "regions_df.replace('Micronesia, Fed. Sts.', 'Micronesia (country)', inplace=True)\n",
+    "regions_df.replace('North Macedonia', 'Macedonia', inplace=True)\n",
+    "regions_df.replace('Russian Federation', 'Russia', inplace=True)\n",
+    "regions_df.replace('Slovak Republic', 'Slovakia', inplace=True)\n",
+    "regions_df.replace('St. Lucia', 'Saint Lucia', inplace=True)\n",
+    "regions_df.replace('St. Vincent and the Grenadines', 'Saint Vincent and the Grenadines', inplace=True)\n",
+    "regions_df.replace('Syrian Arab Republic', 'Syria', inplace=True)\n",
+    "regions_df.replace('Taiwan, China', 'Taiwan', inplace=True)\n",
+    "regions_df.replace('Virgin Islands (U.S.)', 'United States Virgin Islands', inplace=True)\n",
+    "regions_df.replace('Venezuela, RB', 'Venezuela', inplace=True)\n",
+    "regions_df.replace('Yemen, Rep.', 'Yemen', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save CSV\n",
-    "# file = os.path.join('regions.csv')\n",
-    "# regions_df.to_csv(file, index=False, header=True)"
+    "regions_df.to_csv('regions.csv', index=False, header=True)"
    ]
   },
   {
