--- a/static/resources/demographics/regions.ipynb
+++ b/static/resources/demographics/regions.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
     "regions_df.replace('Iran, Islamic Rep.', 'Iran', inplace=True)\n",
     "regions_df.replace('Bahamas, The', 'Bahamas', inplace=True)\n",
     "regions_df.replace('Brunei Darussalam', 'Brunei', inplace=True)\n",
-    "regions_df.replace('Cabo Verde', 'Cape Verde', inplace=True)\n",
+    "# regions_df.replace('Cabo Verde', 'Cape Verde', inplace=True)\n",
     "regions_df.replace('Congo, Dem. Rep.', 'Democratic Republic of Congo', inplace=True)\n",
     "regions_df.replace('Congo, Rep.', 'Congo', inplace=True)\n",
     "regions_df.replace('Egypt, Arab Rep.', 'Egypt', inplace=True)\n",
@@ -144,9 +144,10 @@
     "regions_df.replace('Kyrgyz Republic', 'Kyrgyzstan', inplace=True)\n",
     "regions_df.replace('Lao PDR', 'Laos', inplace=True)\n",
     "regions_df.replace('Micronesia, Fed. Sts.', 'Micronesia (country)', inplace=True)\n",
-    "regions_df.replace('North Macedonia', 'Macedonia', inplace=True)\n",
+    "# regions_df.replace('North Macedonia', 'Macedonia', inplace=True)\n",
     "regions_df.replace('Russian Federation', 'Russia', inplace=True)\n",
     "regions_df.replace('Slovak Republic', 'Slovakia', inplace=True)\n",
+    "regions_df.replace('St. Kitts and Nevis', 'Saint Kitts and Nevis', inplace=True)\n",
     "regions_df.replace('St. Lucia', 'Saint Lucia', inplace=True)\n",
     "regions_df.replace('St. Vincent and the Grenadines', 'Saint Vincent and the Grenadines', inplace=True)\n",
     "regions_df.replace('Syrian Arab Republic', 'Syria', inplace=True)\n",
@@ -158,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
