--- a/static/resources/cases/all.ipynb
+++ b/static/resources/cases/all.ipynb
@@ -298,7 +298,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "countries = confirmed_df.index\n",
+    "all_df = pd.DataFrame(columns=['Country_Region', 'Confirmed', 'Recovered', 'Fatalities'])\n",
+    "for country in countries:\n",
+    "    all_df = all_df.append({'Country_Region': country,\n",
+    "                            'Confirmed': recent_stat(country, confirmed_df),\n",
+    "                            'Recovered': recent_stat(country, recovered_df),\n",
+    "                            'Fatalities': recent_stat(country, fatalities_df),\n",
+    "                           }, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -330,69 +346,62 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>521</td>\n",
-       "      <td>32</td>\n",
-       "      <td>15</td>\n",
+       "      <th>181</th>\n",
+       "      <td>Western Sahara</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Albania</td>\n",
-       "      <td>416</td>\n",
-       "      <td>182</td>\n",
-       "      <td>23</td>\n",
+       "      <th>182</th>\n",
+       "      <td>Yemen</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>1761</td>\n",
-       "      <td>405</td>\n",
-       "      <td>256</td>\n",
+       "      <th>183</th>\n",
+       "      <td>Zambia</td>\n",
+       "      <td>40</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Andorra</td>\n",
-       "      <td>601</td>\n",
-       "      <td>71</td>\n",
-       "      <td>26</td>\n",
+       "      <th>184</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>13</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Angola</td>\n",
-       "      <td>19</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <th>185</th>\n",
+       "      <td>Global</td>\n",
+       "      <td>1691719</td>\n",
+       "      <td>376112.0</td>\n",
+       "      <td>102525.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Country_Region Confirmed Recovered Fatalities\n",
-       "0    Afghanistan       521        32         15\n",
-       "1        Albania       416       182         23\n",
-       "2        Algeria      1761       405        256\n",
-       "3        Andorra       601        71         26\n",
-       "4         Angola        19         2          2"
+       "     Country_Region  Confirmed  Recovered  Fatalities\n",
+       "181  Western Sahara          4        NaN         NaN\n",
+       "182           Yemen          1        NaN         NaN\n",
+       "183          Zambia         40       25.0         2.0\n",
+       "184        Zimbabwe         13        NaN         3.0\n",
+       "185          Global    1691719   376112.0    102525.0"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "countries = confirmed_df.index\n",
-    "all_df = pd.DataFrame(columns=['Country_Region', 'Confirmed', 'Recovered', 'Fatalities'])\n",
-    "for country in countries:\n",
-    "    all_df = all_df.append({'Country_Region': country,\n",
-    "                            'Confirmed': recent_stat(country, confirmed_df),\n",
-    "                            'Recovered': recent_stat(country, recovered_df),\n",
-    "                            'Fatalities': recent_stat(country, fatalities_df),\n",
-    "                           }, ignore_index=True)\n",
-    "\n",
-    "all_df.head()"
+    "all_df = all_df.append(all_df.sum(), ignore_index=True)\n",
+    "all_df = all_df.replace(all_df.iloc[-1,0], 'Global')\n",
+    "all_df.tail()"
    ]
   },
   {
