update charts and data

--- a/static/resources/demographics/population.ipynb
+++ b/static/resources/demographics/population.ipynb
@@ -2837,6 +2837,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save CSV\n",
+    "# pop_prcnt.to_csv('population.csv', index=False, header=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3022,7 +3032,7 @@
    "outputs": [],
    "source": [
     "# Save CSV\n",
-    "pop_prcnt.to_csv('population.csv', index=False, header=True)"
+    "# pop_prcnt.to_csv('population.csv', index=False, header=True)"
    ]
   },
   {
