--- a/static/resources/health/diseases.ipynb
+++ b/static/resources/health/diseases.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,8 +22,15 @@
     "import requests\n",
     "from pprint import pprint\n",
     "import warnings\n",
-    "warnings.simplefilter('ignore')\n",
-    "\n",
+    "warnings.simplefilter('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "file = os.path.join('demographics','regions.csv')\n",
     "regions_df = pd.read_csv(file)"
    ]
@@ -392,6 +399,76 @@
     "    \n",
     "# beds_df"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Endless Medical API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"status\":\"ok\"}\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = \"https://endlessmedicalapi1.p.rapidapi.com/AcceptTermsOfUse\"\n",
+    "\n",
+    "querystring = {\"SessionID\":\"73d9F8qEUGp1v4oQ\",\"passphrase\":\"I have read, understood and I accept and agree to comply with the Terms of Use of EndlessMedicalAPI and Endless Medical services. The Terms of Use are available on endlessmedical.com\"}\n",
+    "\n",
+    "payload = \"\"\n",
+    "headers = {\n",
+    "    'x-rapidapi-host': \"endlessmedicalapi1.p.rapidapi.com\",\n",
+    "    'x-rapidapi-key': \"8cc177b195msh4e4f4ff4e0cae0fp10ed89jsn60e0207e5c4d\",\n",
+    "    'content-type': \"application/x-www-form-urlencoded\"\n",
+    "    }\n",
+    "\n",
+    "response = requests.request(\"POST\", url, data=payload, headers=headers, params=querystring)\n",
+    "\n",
+    "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"status\":\"ok\",\"SessionID\":\"5boc0h0qaGnNlenP\"}\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = \"https://endlessmedicalapi1.p.rapidapi.com/InitSession\"\n",
+    "\n",
+    "headers = {\n",
+    "    'x-rapidapi-host': \"endlessmedicalapi1.p.rapidapi.com\",\n",
+    "    'x-rapidapi-key': \"8cc177b195msh4e4f4ff4e0cae0fp10ed89jsn60e0207e5c4d\"\n",
+    "    }\n",
+    "\n",
+    "response = requests.request(\"GET\", url, headers=headers)\n",
+    "\n",
+    "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
