--- a/static/resources/charts2.ipynb
+++ b/static/resources/charts2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,6 +444,295 @@
     "scatter_all(first_fatalities_all, 'Fatalities', 'Respiratory diseases (DALYs lost)', 'scatter_resps.png')\n",
     "scatter_all(first_fatalities_all, 'Fatalities', 'Ages 80+', 'scatter_age.png')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Percent of Population"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = os.path.join('cases', 'all.ipynb')\n",
+    "%run '{file}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country_Code</th>\n",
+       "      <th>Pop Density (per sqkm)</th>\n",
+       "      <th>Ages 0-9</th>\n",
+       "      <th>Ages 10-19</th>\n",
+       "      <th>Ages 20-29</th>\n",
+       "      <th>Ages 30-39</th>\n",
+       "      <th>Ages 40-49</th>\n",
+       "      <th>Ages 50-59</th>\n",
+       "      <th>Ages 60-69</th>\n",
+       "      <th>Ages 70-79</th>\n",
+       "      <th>Ages 80+</th>\n",
+       "      <th>Population Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ABW</td>\n",
+       "      <td>588.027778</td>\n",
+       "      <td>0.111794</td>\n",
+       "      <td>0.135763</td>\n",
+       "      <td>0.134752</td>\n",
+       "      <td>0.107968</td>\n",
+       "      <td>0.140308</td>\n",
+       "      <td>0.165797</td>\n",
+       "      <td>0.120656</td>\n",
+       "      <td>0.059747</td>\n",
+       "      <td>0.023213</td>\n",
+       "      <td>105846</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AFG</td>\n",
+       "      <td>56.937760</td>\n",
+       "      <td>0.295644</td>\n",
+       "      <td>0.254022</td>\n",
+       "      <td>0.175506</td>\n",
+       "      <td>0.114011</td>\n",
+       "      <td>0.073628</td>\n",
+       "      <td>0.046054</td>\n",
+       "      <td>0.026612</td>\n",
+       "      <td>0.011763</td>\n",
+       "      <td>0.002760</td>\n",
+       "      <td>37172388</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AGO</td>\n",
+       "      <td>24.713052</td>\n",
+       "      <td>0.337316</td>\n",
+       "      <td>0.236616</td>\n",
+       "      <td>0.161649</td>\n",
+       "      <td>0.111513</td>\n",
+       "      <td>0.072069</td>\n",
+       "      <td>0.044858</td>\n",
+       "      <td>0.023043</td>\n",
+       "      <td>0.010207</td>\n",
+       "      <td>0.002731</td>\n",
+       "      <td>30809764</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ALB</td>\n",
+       "      <td>104.612263</td>\n",
+       "      <td>0.115932</td>\n",
+       "      <td>0.135609</td>\n",
+       "      <td>0.169658</td>\n",
+       "      <td>0.126100</td>\n",
+       "      <td>0.117269</td>\n",
+       "      <td>0.137702</td>\n",
+       "      <td>0.105786</td>\n",
+       "      <td>0.064589</td>\n",
+       "      <td>0.027355</td>\n",
+       "      <td>2866376</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ARE</td>\n",
+       "      <td>135.609110</td>\n",
+       "      <td>0.103749</td>\n",
+       "      <td>0.084914</td>\n",
+       "      <td>0.221613</td>\n",
+       "      <td>0.312420</td>\n",
+       "      <td>0.174928</td>\n",
+       "      <td>0.077529</td>\n",
+       "      <td>0.018721</td>\n",
+       "      <td>0.004947</td>\n",
+       "      <td>0.001180</td>\n",
+       "      <td>9630962</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>174</th>\n",
+       "      <td>WSM</td>\n",
+       "      <td>69.303887</td>\n",
+       "      <td>0.270548</td>\n",
+       "      <td>0.207191</td>\n",
+       "      <td>0.153063</td>\n",
+       "      <td>0.112003</td>\n",
+       "      <td>0.101215</td>\n",
+       "      <td>0.080274</td>\n",
+       "      <td>0.046383</td>\n",
+       "      <td>0.021955</td>\n",
+       "      <td>0.007368</td>\n",
+       "      <td>196128</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175</th>\n",
+       "      <td>YEM</td>\n",
+       "      <td>53.977853</td>\n",
+       "      <td>0.276255</td>\n",
+       "      <td>0.228461</td>\n",
+       "      <td>0.195906</td>\n",
+       "      <td>0.132276</td>\n",
+       "      <td>0.074518</td>\n",
+       "      <td>0.047242</td>\n",
+       "      <td>0.028800</td>\n",
+       "      <td>0.013049</td>\n",
+       "      <td>0.003494</td>\n",
+       "      <td>28498683</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176</th>\n",
+       "      <td>ZAF</td>\n",
+       "      <td>47.630120</td>\n",
+       "      <td>0.200007</td>\n",
+       "      <td>0.174423</td>\n",
+       "      <td>0.178745</td>\n",
+       "      <td>0.167542</td>\n",
+       "      <td>0.115498</td>\n",
+       "      <td>0.081025</td>\n",
+       "      <td>0.051390</td>\n",
+       "      <td>0.024151</td>\n",
+       "      <td>0.007220</td>\n",
+       "      <td>57779620</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>177</th>\n",
+       "      <td>ZMB</td>\n",
+       "      <td>23.341479</td>\n",
+       "      <td>0.315885</td>\n",
+       "      <td>0.247712</td>\n",
+       "      <td>0.170816</td>\n",
+       "      <td>0.118234</td>\n",
+       "      <td>0.073810</td>\n",
+       "      <td>0.040074</td>\n",
+       "      <td>0.021322</td>\n",
+       "      <td>0.009608</td>\n",
+       "      <td>0.002539</td>\n",
+       "      <td>17351820</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>37.324591</td>\n",
+       "      <td>0.298842</td>\n",
+       "      <td>0.233132</td>\n",
+       "      <td>0.169913</td>\n",
+       "      <td>0.128015</td>\n",
+       "      <td>0.079671</td>\n",
+       "      <td>0.045177</td>\n",
+       "      <td>0.027398</td>\n",
+       "      <td>0.013545</td>\n",
+       "      <td>0.004306</td>\n",
+       "      <td>14439018</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>179 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Country_Code  Pop Density (per sqkm)  Ages 0-9  Ages 10-19  Ages 20-29  \\\n",
+       "0            ABW              588.027778  0.111794    0.135763    0.134752   \n",
+       "1            AFG               56.937760  0.295644    0.254022    0.175506   \n",
+       "2            AGO               24.713052  0.337316    0.236616    0.161649   \n",
+       "3            ALB              104.612263  0.115932    0.135609    0.169658   \n",
+       "4            ARE              135.609110  0.103749    0.084914    0.221613   \n",
+       "..           ...                     ...       ...         ...         ...   \n",
+       "174          WSM               69.303887  0.270548    0.207191    0.153063   \n",
+       "175          YEM               53.977853  0.276255    0.228461    0.195906   \n",
+       "176          ZAF               47.630120  0.200007    0.174423    0.178745   \n",
+       "177          ZMB               23.341479  0.315885    0.247712    0.170816   \n",
+       "178          ZWE               37.324591  0.298842    0.233132    0.169913   \n",
+       "\n",
+       "     Ages 30-39  Ages 40-49  Ages 50-59  Ages 60-69  Ages 70-79  Ages 80+  \\\n",
+       "0      0.107968    0.140308    0.165797    0.120656    0.059747  0.023213   \n",
+       "1      0.114011    0.073628    0.046054    0.026612    0.011763  0.002760   \n",
+       "2      0.111513    0.072069    0.044858    0.023043    0.010207  0.002731   \n",
+       "3      0.126100    0.117269    0.137702    0.105786    0.064589  0.027355   \n",
+       "4      0.312420    0.174928    0.077529    0.018721    0.004947  0.001180   \n",
+       "..          ...         ...         ...         ...         ...       ...   \n",
+       "174    0.112003    0.101215    0.080274    0.046383    0.021955  0.007368   \n",
+       "175    0.132276    0.074518    0.047242    0.028800    0.013049  0.003494   \n",
+       "176    0.167542    0.115498    0.081025    0.051390    0.024151  0.007220   \n",
+       "177    0.118234    0.073810    0.040074    0.021322    0.009608  0.002539   \n",
+       "178    0.128015    0.079671    0.045177    0.027398    0.013545  0.004306   \n",
+       "\n",
+       "     Population Total  \n",
+       "0              105846  \n",
+       "1            37172388  \n",
+       "2            30809764  \n",
+       "3             2866376  \n",
+       "4             9630962  \n",
+       "..                ...  \n",
+       "174            196128  \n",
+       "175          28498683  \n",
+       "176          57779620  \n",
+       "177          17351820  \n",
+       "178          14439018  \n",
+       "\n",
+       "[179 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file = os.path.join('demographics','population.csv')\n",
+    "population_df = pd.read_csv(file)\n",
+    "population_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
