--- a/static/resources/cases/all.ipynb
+++ b/static/resources/cases/all.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "[1 rows x 83 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
        "[5 rows x 83 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,25 +418,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Index(['United States', 'Spain', 'Italy', 'France', 'Germany',\n",
-       "       'United Kingdom', 'China', 'Iran'],\n",
+       "       'United Kingdom', 'China', 'Iran', 'Turkey', 'Belgium', 'Netherlands',\n",
+       "       'Switzerland', 'Canada', 'Brazil'],\n",
        "      dtype='object', name='Country_Region')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Top Countries\n",
-    "n = 9\n",
+    "n = 15\n",
     "last_day = confirmed_df.columns[-1]\n",
     "top_confirmed_df = confirmed_df.nlargest(n, last_day)\n",
     "top_confirmed_df.drop(index='Global', inplace=True)\n",
@@ -721,7 +722,7 @@
    "outputs": [],
    "source": [
     "# Save JSON\n",
-    "all_df.to_json('all.json', orient='records')"
+    "# all_df.to_json('all.json', orient='records')"
    ]
   },
   {
@@ -770,7 +771,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Confirmed Cases Since First Day\n",
     "first_confirmed_top = first_day_df(top_confirmed_df)\n",
     "first_infected_top = first_day_df(top_infected_df)\n",
     "\n",
@@ -778,6 +778,35 @@
     "# first_fatalities_all = first_day_df(fatalities_df)\n",
     "# first_recovered_all = first_day_df(recovered_df)\n",
     "# first_infected_all = first_day_df(infected_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### By Region"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# regions_df = pd.read_csv('../demographics/regions.csv')\n",
+    "# confirmed_byregion = pd.merge(regions_df, all_df, on='Country_Region', how='inner')\n",
+    "# confirmed_byregion.sort_values('First Day', inplace=True)\n",
+    "# confirmed_byregion.head(40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# centralasia = confirmed_byregion.loc[confirmed_byregion['Region'].str.contains('Central Asia')]\n",
+    "# centralasia.sort_values('First Day')"
    ]
   },
   {
