--- a/static/resources/cases/confirmed.ipynb
+++ b/static/resources/cases/confirmed.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -57,9 +57,6 @@
        "      <th>1/26/20</th>\n",
        "      <th>1/27/20</th>\n",
        "      <th>...</th>\n",
-       "      <th>4/2/20</th>\n",
-       "      <th>4/3/20</th>\n",
-       "      <th>4/4/20</th>\n",
        "      <th>4/5/20</th>\n",
        "      <th>4/6/20</th>\n",
        "      <th>4/7/20</th>\n",
@@ -67,6 +64,9 @@
        "      <th>4/9/20</th>\n",
        "      <th>4/10/20</th>\n",
        "      <th>4/11/20</th>\n",
+       "      <th>4/12/20</th>\n",
+       "      <th>4/13/20</th>\n",
+       "      <th>4/14/20</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -83,9 +83,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>273</td>\n",
-       "      <td>281</td>\n",
-       "      <td>299</td>\n",
        "      <td>349</td>\n",
        "      <td>367</td>\n",
        "      <td>423</td>\n",
@@ -93,6 +90,9 @@
        "      <td>484</td>\n",
        "      <td>521</td>\n",
        "      <td>555</td>\n",
+       "      <td>607</td>\n",
+       "      <td>665</td>\n",
+       "      <td>714</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -107,9 +107,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>277</td>\n",
-       "      <td>304</td>\n",
-       "      <td>333</td>\n",
        "      <td>361</td>\n",
        "      <td>377</td>\n",
        "      <td>383</td>\n",
@@ -117,6 +114,9 @@
        "      <td>409</td>\n",
        "      <td>416</td>\n",
        "      <td>433</td>\n",
+       "      <td>446</td>\n",
+       "      <td>467</td>\n",
+       "      <td>475</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -131,9 +131,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>986</td>\n",
-       "      <td>1171</td>\n",
-       "      <td>1251</td>\n",
        "      <td>1320</td>\n",
        "      <td>1423</td>\n",
        "      <td>1468</td>\n",
@@ -141,6 +138,9 @@
        "      <td>1666</td>\n",
        "      <td>1761</td>\n",
        "      <td>1825</td>\n",
+       "      <td>1914</td>\n",
+       "      <td>1983</td>\n",
+       "      <td>2070</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -155,9 +155,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>428</td>\n",
-       "      <td>439</td>\n",
-       "      <td>466</td>\n",
        "      <td>501</td>\n",
        "      <td>525</td>\n",
        "      <td>545</td>\n",
@@ -165,6 +162,9 @@
        "      <td>583</td>\n",
        "      <td>601</td>\n",
        "      <td>601</td>\n",
+       "      <td>638</td>\n",
+       "      <td>646</td>\n",
+       "      <td>659</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -179,9 +179,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>8</td>\n",
-       "      <td>8</td>\n",
-       "      <td>10</td>\n",
        "      <td>14</td>\n",
        "      <td>16</td>\n",
        "      <td>17</td>\n",
@@ -189,10 +186,13 @@
        "      <td>19</td>\n",
        "      <td>19</td>\n",
        "      <td>19</td>\n",
+       "      <td>19</td>\n",
+       "      <td>19</td>\n",
+       "      <td>19</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 85 columns</p>\n",
+       "<p>5 rows × 88 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -203,24 +203,24 @@
        "3            NaN        Andorra  42.5063   1.5218        0        0        0   \n",
        "4            NaN         Angola -11.2027  17.8739        0        0        0   \n",
        "\n",
-       "   1/25/20  1/26/20  1/27/20  ...  4/2/20  4/3/20  4/4/20  4/5/20  4/6/20  \\\n",
-       "0        0        0        0  ...     273     281     299     349     367   \n",
-       "1        0        0        0  ...     277     304     333     361     377   \n",
-       "2        0        0        0  ...     986    1171    1251    1320    1423   \n",
-       "3        0        0        0  ...     428     439     466     501     525   \n",
-       "4        0        0        0  ...       8       8      10      14      16   \n",
+       "   1/25/20  1/26/20  1/27/20  ...  4/5/20  4/6/20  4/7/20  4/8/20  4/9/20  \\\n",
+       "0        0        0        0  ...     349     367     423     444     484   \n",
+       "1        0        0        0  ...     361     377     383     400     409   \n",
+       "2        0        0        0  ...    1320    1423    1468    1572    1666   \n",
+       "3        0        0        0  ...     501     525     545     564     583   \n",
+       "4        0        0        0  ...      14      16      17      19      19   \n",
        "\n",
-       "   4/7/20  4/8/20  4/9/20  4/10/20  4/11/20  \n",
-       "0     423     444     484      521      555  \n",
-       "1     383     400     409      416      433  \n",
-       "2    1468    1572    1666     1761     1825  \n",
-       "3     545     564     583      601      601  \n",
-       "4      17      19      19       19       19  \n",
+       "   4/10/20  4/11/20  4/12/20  4/13/20  4/14/20  \n",
+       "0      521      555      607      665      714  \n",
+       "1      416      433      446      467      475  \n",
+       "2     1761     1825     1914     1983     2070  \n",
+       "3      601      601      638      646      659  \n",
+       "4       19       19       19       19       19  \n",
        "\n",
-       "[5 rows x 85 columns]"
+       "[5 rows x 88 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -277,9 +277,6 @@
        "      <th>1/26/20</th>\n",
        "      <th>1/27/20</th>\n",
        "      <th>...</th>\n",
-       "      <th>4/2/20</th>\n",
-       "      <th>4/3/20</th>\n",
-       "      <th>4/4/20</th>\n",
        "      <th>4/5/20</th>\n",
        "      <th>4/6/20</th>\n",
        "      <th>4/7/20</th>\n",
@@ -287,6 +284,9 @@
        "      <th>4/9/20</th>\n",
        "      <th>4/10/20</th>\n",
        "      <th>4/11/20</th>\n",
+       "      <th>4/12/20</th>\n",
+       "      <th>4/13/20</th>\n",
+       "      <th>4/14/20</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -327,15 +327,15 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>82</td>\n",
-       "      <td>84</td>\n",
-       "      <td>93</td>\n",
        "      <td>112</td>\n",
        "      <td>113</td>\n",
        "      <td>121</td>\n",
        "      <td>121</td>\n",
        "      <td>128</td>\n",
        "      <td>130</td>\n",
+       "      <td>133</td>\n",
+       "      <td>133</td>\n",
+       "      <td>133</td>\n",
        "      <td>133</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -375,9 +375,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>316</td>\n",
-       "      <td>316</td>\n",
-       "      <td>452</td>\n",
        "      <td>475</td>\n",
        "      <td>513</td>\n",
        "      <td>573</td>\n",
@@ -385,6 +382,9 @@
        "      <td>683</td>\n",
        "      <td>725</td>\n",
        "      <td>788</td>\n",
+       "      <td>897</td>\n",
+       "      <td>903</td>\n",
+       "      <td>923</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -399,9 +399,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>30</td>\n",
-       "      <td>37</td>\n",
-       "      <td>40</td>\n",
        "      <td>42</td>\n",
        "      <td>43</td>\n",
        "      <td>43</td>\n",
@@ -409,10 +406,13 @@
        "      <td>45</td>\n",
        "      <td>50</td>\n",
        "      <td>51</td>\n",
+       "      <td>51</td>\n",
+       "      <td>51</td>\n",
+       "      <td>51</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 85 columns</p>\n",
+       "<p>5 rows × 88 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -423,24 +423,24 @@
        "3               Puerto Rico             US  18.2208  -66.5901        0   \n",
        "4            Virgin Islands             US  18.3358  -64.8963        0   \n",
        "\n",
-       "   1/23/20  1/24/20  1/25/20  1/26/20  1/27/20  ...  4/2/20  4/3/20  4/4/20  \\\n",
+       "   1/23/20  1/24/20  1/25/20  1/26/20  1/27/20  ...  4/5/20  4/6/20  4/7/20  \\\n",
        "0        0        0        0        0        0  ...       0       0       0   \n",
-       "1        0        0        0        0        0  ...      82      84      93   \n",
+       "1        0        0        0        0        0  ...     112     113     121   \n",
        "2        0        0        0        0        0  ...       6       6       6   \n",
-       "3        0        0        0        0        0  ...     316     316     452   \n",
-       "4        0        0        0        0        0  ...      30      37      40   \n",
+       "3        0        0        0        0        0  ...     475     513     573   \n",
+       "4        0        0        0        0        0  ...      42      43      43   \n",
        "\n",
-       "   4/5/20  4/6/20  4/7/20  4/8/20  4/9/20  4/10/20  4/11/20  \n",
-       "0       0       0       0       0       0        0        0  \n",
-       "1     112     113     121     121     128      130      133  \n",
-       "2       6       6       6       6       6        6        6  \n",
-       "3     475     513     573     620     683      725      788  \n",
-       "4      42      43      43      45      45       50       51  \n",
+       "   4/8/20  4/9/20  4/10/20  4/11/20  4/12/20  4/13/20  4/14/20  \n",
+       "0       0       0        0        0        0        0        0  \n",
+       "1     121     128      130      133      133      133      133  \n",
+       "2       6       6        6        6        6        6        6  \n",
+       "3     620     683      725      788      897      903      923  \n",
+       "4      45      45       50       51       51       51       51  \n",
        "\n",
-       "[5 rows x 85 columns]"
+       "[5 rows x 88 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,14 +459,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2644\n"
+      "2693\n"
      ]
     },
     {
@@ -501,9 +501,6 @@
        "      <th>1/26/20</th>\n",
        "      <th>1/27/20</th>\n",
        "      <th>...</th>\n",
-       "      <th>4/2/20</th>\n",
-       "      <th>4/3/20</th>\n",
-       "      <th>4/4/20</th>\n",
        "      <th>4/5/20</th>\n",
        "      <th>4/6/20</th>\n",
        "      <th>4/7/20</th>\n",
@@ -511,33 +508,12 @@
        "      <th>4/9/20</th>\n",
        "      <th>4/10/20</th>\n",
        "      <th>4/11/20</th>\n",
+       "      <th>4/12/20</th>\n",
+       "      <th>4/13/20</th>\n",
+       "      <th>4/14/20</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3231</th>\n",
-       "      <td>New Jersey</td>\n",
-       "      <td>US</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4866</td>\n",
-       "      <td>4808</td>\n",
-       "      <td>3935</td>\n",
-       "      <td>3821</td>\n",
-       "      <td>3521</td>\n",
-       "      <td>2207</td>\n",
-       "      <td>1391</td>\n",
-       "      <td>996</td>\n",
-       "      <td>649</td>\n",
-       "      <td>924</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>3240</th>\n",
        "      <td>Rhode Island</td>\n",
@@ -551,9 +527,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>80</td>\n",
-       "      <td>146</td>\n",
-       "      <td>241</td>\n",
        "      <td>238</td>\n",
        "      <td>332</td>\n",
        "      <td>353</td>\n",
@@ -561,6 +534,9 @@
        "      <td>551</td>\n",
        "      <td>408</td>\n",
        "      <td>649</td>\n",
+       "      <td>965</td>\n",
+       "      <td>965</td>\n",
+       "      <td>1551</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3243</th>\n",
@@ -575,9 +551,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>6</td>\n",
-       "      <td>54</td>\n",
-       "      <td>63</td>\n",
        "      <td>86</td>\n",
        "      <td>69</td>\n",
        "      <td>59</td>\n",
@@ -585,6 +558,9 @@
        "      <td>38</td>\n",
        "      <td>22</td>\n",
        "      <td>19</td>\n",
+       "      <td>12</td>\n",
+       "      <td>46</td>\n",
+       "      <td>136</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3246</th>\n",
@@ -599,9 +575,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>11</td>\n",
        "      <td>13</td>\n",
        "      <td>21</td>\n",
        "      <td>3</td>\n",
@@ -609,6 +582,9 @@
        "      <td>8</td>\n",
        "      <td>59</td>\n",
        "      <td>11</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3248</th>\n",
@@ -623,9 +599,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>344</td>\n",
-       "      <td>501</td>\n",
-       "      <td>483</td>\n",
        "      <td>533</td>\n",
        "      <td>648</td>\n",
        "      <td>677</td>\n",
@@ -633,38 +606,65 @@
        "      <td>838</td>\n",
        "      <td>908</td>\n",
        "      <td>848</td>\n",
+       "      <td>732</td>\n",
+       "      <td>619</td>\n",
+       "      <td>484</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3250</th>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>US</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 85 columns</p>\n",
+       "<p>5 rows × 88 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "     Province/State Country/Region  Lat  Long  1/22/20  1/23/20  1/24/20  \\\n",
-       "3231     New Jersey             US  0.0   0.0        0        0        0   \n",
        "3240   Rhode Island             US  0.0   0.0        0        0        0   \n",
        "3243      Tennessee             US  0.0   0.0        0        0        0   \n",
        "3246        Vermont             US  0.0   0.0        0        0        0   \n",
        "3248     Washington             US  0.0   0.0        0        0        0   \n",
+       "3250      Wisconsin             US  0.0   0.0        0        0        0   \n",
        "\n",
-       "      1/25/20  1/26/20  1/27/20  ...  4/2/20  4/3/20  4/4/20  4/5/20  4/6/20  \\\n",
-       "3231        0        0        0  ...    4866    4808    3935    3821    3521   \n",
-       "3240        0        0        0  ...      80     146     241     238     332   \n",
-       "3243        0        0        0  ...       6      54      63      86      69   \n",
-       "3246        0        0        0  ...       5       6      11      13      21   \n",
-       "3248        0        0        0  ...     344     501     483     533     648   \n",
+       "      1/25/20  1/26/20  1/27/20  ...  4/5/20  4/6/20  4/7/20  4/8/20  4/9/20  \\\n",
+       "3240        0        0        0  ...     238     332     353     274     551   \n",
+       "3243        0        0        0  ...      86      69      59      31      38   \n",
+       "3246        0        0        0  ...      13      21       3      33       8   \n",
+       "3248        0        0        0  ...     533     648     677     915     838   \n",
+       "3250        0        0        0  ...       0       0       0       0       0   \n",
        "\n",
-       "      4/7/20  4/8/20  4/9/20  4/10/20  4/11/20  \n",
-       "3231    2207    1391     996      649      924  \n",
-       "3240     353     274     551      408      649  \n",
-       "3243      59      31      38       22       19  \n",
-       "3246       3      33       8       59       11  \n",
-       "3248     677     915     838      908      848  \n",
+       "      4/10/20  4/11/20  4/12/20  4/13/20  4/14/20  \n",
+       "3240      408      649      965      965     1551  \n",
+       "3243       22       19       12       46      136  \n",
+       "3246       59       11        7        8       39  \n",
+       "3248      908      848      732      619      484  \n",
+       "3250        0        0        0        0        1  \n",
        "\n",
-       "[5 rows x 85 columns]"
+       "[5 rows x 88 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1214,8 +1214,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = os.path.join('confirmed.csv')\n",
-    "combined_df.to_csv(file, index=False, header=True)"
+    "# file = os.path.join('confirmed.csv')\n",
+    "# combined_df.to_csv(file, index=False, header=True)"
    ]
   },
   {
