--- a/static/resources/charts1.ipynb
+++ b/static/resources/charts1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,21 +24,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "83\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "file = os.path.join('cases', 'all.ipynb')\n",
-    "%run '{file}'\n",
-    "print(len(confirmed_df.columns))"
+    "%run '{file}'"
    ]
   },
   {
